--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "@hookform/resolvers": "^3.9.0",
         "@popperjs/core": "^2.11.8",
+        "@react-oauth/google": "^0.12.1",
+        "@reduxjs/toolkit": "^2.3.0",
         "@testing-library/jest-dom": "^5.17.0",
         "@testing-library/react": "^13.4.0",
         "@testing-library/user-event": "^13.5.0",
@@ -14,15 +17,22 @@
         "daterangepicker": "^3.1.0",
         "dayjs": "^1.11.13",
         "dotenv": "^16.4.5",
+        "jwt-decode": "^4.0.0",
+        "moment": "^2.30.1",
         "react": "^18.3.1",
+        "react-bootstrap": "^2.10.5",
         "react-date-range": "^2.0.1",
         "react-dom": "^18.3.1",
+        "react-hook-form": "^7.53.0",
+        "react-query": "^3.39.3",
         "react-redux": "^9.1.2",
         "react-router-dom": "^6.27.0",
-        "react-scripts": "5.0.1",
+        "react-scripts": "^5.0.1",
+        "react-toastify": "^10.0.6",
         "redux": "^5.0.1",
         "swiper": "^11.1.14",
-        "web-vitals": "^2.1.4"
+        "web-vitals": "^2.1.4",
+        "yup": "^1.4.0"
     },
     "scripts": {
         "start": "react-scripts start",
