--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "react-bootstrap": "^2.10.5",
         "react-date-range": "^2.0.1",
         "react-dom": "^18.3.1",
+        "react-dropzone": "^14.2.10",
         "react-hook-form": "^7.53.0",
         "react-query": "^3.39.3",
         "react-redux": "^9.1.2",
