--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "dayjs": "^1.11.13",
         "dotenv": "^16.4.5",
         "jwt-decode": "^4.0.0",
+        "lucide-react": "^0.453.0",
         "moment": "^2.30.1",
         "react": "^18.3.1",
         "react-bootstrap": "^2.10.5",
