--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "@chakra-ui/icons": "^2.2.4",
+        "@chakra-ui/react": "^3.0.1",
+        "@emotion/react": "^11.13.3",
+        "@emotion/styled": "^11.13.0",
         "@hookform/resolvers": "^3.9.0",
         "@popperjs/core": "^2.11.8",
         "@react-oauth/google": "^0.12.1",
@@ -17,6 +21,7 @@
         "daterangepicker": "^3.1.0",
         "dayjs": "^1.11.13",
         "dotenv": "^16.4.5",
+        "framer-motion": "^11.11.10",
         "jwt-decode": "^4.0.0",
         "lucide-react": "^0.453.0",
         "moment": "^2.30.1",
