--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "dotenv": "^16.4.5",
         "framer-motion": "^11.11.11",
         "jwt-decode": "^4.0.0",
+        "leaflet": "^1.9.4",
         "lucide-react": "^0.454.0",
         "moment": "^2.30.1",
         "react": "^18.3.1",
@@ -31,6 +32,7 @@
         "react-dom": "^18.3.1",
         "react-dropzone": "^14.3.2",
         "react-hook-form": "^7.53.0",
+        "react-leaflet": "^4.2.1",
         "react-query": "^3.39.3",
         "react-redux": "^9.1.2",
         "react-router-dom": "^6.27.0",
