--- a/package.json
+++ b/package.json
@@ -31,10 +31,13 @@
         "react-dom": "^18.3.1",
         "react-dropzone": "^14.2.10",
         "react-hook-form": "^7.53.0",
+        "react-leaflet": "^4.2.1",
+        "react-places-autocomplete": "^7.3.0",
         "react-query": "^3.39.3",
         "react-redux": "^9.1.2",
         "react-router-dom": "^6.27.0",
         "react-scripts": "5.0.1",
+        "react-select": "^5.8.2",
         "react-toastify": "^10.0.6",
         "redux": "^5.0.1",
         "swiper": "^11.1.14",
