--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
         "react-leaflet": "^4.2.1",
         "react-places-autocomplete": "^7.3.0",
         "react-query": "^3.39.3",
+        "react-range": "^1.10.0",
         "react-redux": "^9.1.2",
         "react-router-dom": "^6.27.0",
         "react-scripts": "5.0.1",
