--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "dayjs": "^1.11.13",
         "dotenv": "^16.4.5",
         "framer-motion": "^11.11.10",
+        "i18next": "^24.0.2",
         "jwt-decode": "^4.0.0",
         "lucide-react": "^0.453.0",
         "moment": "^2.30.1",
@@ -31,6 +32,7 @@
         "react-dom": "^18.3.1",
         "react-dropzone": "^14.2.10",
         "react-hook-form": "^7.53.0",
+        "react-i18next": "^15.1.2",
         "react-leaflet": "^4.2.1",
         "react-places-autocomplete": "^7.3.0",
         "react-query": "^3.39.3",
@@ -42,6 +44,8 @@
         "react-toastify": "^10.0.6",
         "redux": "^5.0.1",
         "swiper": "^11.1.14",
+        "typescript": "^5.7.2",
+        "unidecode": "^1.1.0",
         "web-vitals": "^2.1.4",
         "yup": "^1.4.0"
     },
