--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "framer-motion": "^11.11.10",
         "i18next": "^24.0.2",
         "jwt-decode": "^4.0.0",
+        "leaflet": "^1.9.4",
         "lucide-react": "^0.453.0",
         "moment": "^2.30.1",
         "react": "^18.3.1",
